Added the random prediction page

--- a/1. Stats-Infrences.ipynb
+++ b/1. Stats-Infrences.ipynb
@@ -32,29 +32,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-12-11T09:27:35.503179Z",
-     "iopub.status.busy": "2024-12-11T09:27:35.502801Z",
-     "iopub.status.idle": "2024-12-11T09:27:35.513007Z",
-     "shell.execute_reply": "2024-12-11T09:27:35.511513Z",
-     "shell.execute_reply.started": "2024-12-11T09:27:35.503150Z"
+     "iopub.execute_input": "2025-01-05T12:51:52.660158Z",
+     "iopub.status.busy": "2025-01-05T12:51:52.654619Z",
+     "iopub.status.idle": "2025-01-05T12:51:54.020289Z",
+     "shell.execute_reply": "2025-01-05T12:51:54.020289Z",
+     "shell.execute_reply.started": "2025-01-05T12:51:52.658142Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/kaggle/input/playground-series-s4e12/sample_submission.csv\n",
-      "/kaggle/input/playground-series-s4e12/train.csv\n",
-      "/kaggle/input/playground-series-s4e12/test.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This Python 3 environment comes with many helpful analytics libraries installed\n",
     "# It is defined by the kaggle/python Docker image: https://github.com/kaggle/docker-python\n",
@@ -77,14 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-11T09:27:35.515467Z",
-     "iopub.status.busy": "2024-12-11T09:27:35.515115Z",
-     "iopub.status.idle": "2024-12-11T09:27:35.530470Z",
-     "shell.execute_reply": "2024-12-11T09:27:35.529228Z",
-     "shell.execute_reply.started": "2024-12-11T09:27:35.515436Z"
+     "iopub.execute_input": "2025-01-05T12:51:54.020289Z",
+     "iopub.status.busy": "2025-01-05T12:51:54.020289Z",
+     "iopub.status.idle": "2025-01-05T12:51:55.573696Z",
+     "shell.execute_reply": "2025-01-05T12:51:55.573696Z",
+     "shell.execute_reply.started": "2025-01-05T12:51:54.020289Z"
     }
    },
    "outputs": [],
@@ -105,14 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-11T09:27:35.532307Z",
-     "iopub.status.busy": "2024-12-11T09:27:35.531964Z",
-     "iopub.status.idle": "2024-12-11T09:27:40.058158Z",
-     "shell.execute_reply": "2024-12-11T09:27:40.056730Z",
-     "shell.execute_reply.started": "2024-12-11T09:27:35.532275Z"
+     "iopub.execute_input": "2025-01-05T13:24:01.768689Z",
+     "iopub.status.busy": "2025-01-05T13:24:01.767687Z",
+     "iopub.status.idle": "2025-01-05T13:24:04.672738Z",
+     "shell.execute_reply": "2025-01-05T13:24:04.670711Z",
+     "shell.execute_reply.started": "2025-01-05T13:24:01.768689Z"
     }
    },
    "outputs": [
@@ -322,26 +312,26 @@
        "4             Weekly         House          2022.0  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train = pd.read_csv(\"/kaggle/input/playground-series-s4e12/train.csv\")\n",
+    "train = pd.read_csv(\"train.csv\")\n",
     "train.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-11T09:27:40.060348Z",
-     "iopub.status.busy": "2024-12-11T09:27:40.059870Z",
-     "iopub.status.idle": "2024-12-11T09:27:42.850366Z",
-     "shell.execute_reply": "2024-12-11T09:27:42.849139Z",
-     "shell.execute_reply.started": "2024-12-11T09:27:40.060299Z"
+     "iopub.execute_input": "2025-01-05T13:24:09.090511Z",
+     "iopub.status.busy": "2025-01-05T13:24:09.090511Z",
+     "iopub.status.idle": "2025-01-05T13:24:10.486400Z",
+     "shell.execute_reply": "2025-01-05T13:24:10.486400Z",
+     "shell.execute_reply.started": "2025-01-05T13:24:09.090511Z"
     }
    },
    "outputs": [
@@ -545,26 +535,26 @@
        "4             Weekly         House  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test = pd.read_csv(\"/kaggle/input/playground-series-s4e12/test.csv\")\n",
+    "test = pd.read_csv(\"test.csv\")\n",
     "test.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-11T09:27:42.854090Z",
-     "iopub.status.busy": "2024-12-11T09:27:42.853579Z",
-     "iopub.status.idle": "2024-12-11T09:27:42.862024Z",
-     "shell.execute_reply": "2024-12-11T09:27:42.860342Z",
-     "shell.execute_reply.started": "2024-12-11T09:27:42.854038Z"
+     "iopub.execute_input": "2025-01-05T13:24:10.709868Z",
+     "iopub.status.busy": "2025-01-05T13:24:10.709868Z",
+     "iopub.status.idle": "2025-01-05T13:24:10.716063Z",
+     "shell.execute_reply": "2025-01-05T13:24:10.715035Z",
+     "shell.execute_reply.started": "2025-01-05T13:24:10.709868Z"
     }
    },
    "outputs": [
@@ -591,14 +581,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-11T09:27:42.864100Z",
-     "iopub.status.busy": "2024-12-11T09:27:42.863679Z",
-     "iopub.status.idle": "2024-12-11T09:27:43.258688Z",
-     "shell.execute_reply": "2024-12-11T09:27:43.257292Z",
-     "shell.execute_reply.started": "2024-12-11T09:27:42.864066Z"
+     "iopub.execute_input": "2025-01-05T13:24:14.701087Z",
+     "iopub.status.busy": "2025-01-05T13:24:14.701087Z",
+     "iopub.status.idle": "2025-01-05T13:24:14.938553Z",
+     "shell.execute_reply": "2025-01-05T13:24:14.937531Z",
+     "shell.execute_reply.started": "2025-01-05T13:24:14.701087Z"
     }
    },
    "outputs": [],
@@ -608,14 +598,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-11T09:27:43.260674Z",
-     "iopub.status.busy": "2024-12-11T09:27:43.260205Z",
-     "iopub.status.idle": "2024-12-11T09:27:43.267691Z",
-     "shell.execute_reply": "2024-12-11T09:27:43.266530Z",
-     "shell.execute_reply.started": "2024-12-11T09:27:43.260613Z"
+     "iopub.execute_input": "2025-01-05T13:24:14.939543Z",
+     "iopub.status.busy": "2025-01-05T13:24:14.939543Z",
+     "iopub.status.idle": "2025-01-05T13:24:14.944133Z",
+     "shell.execute_reply": "2025-01-05T13:24:14.944133Z",
+     "shell.execute_reply.started": "2025-01-05T13:24:14.939543Z"
     }
    },
    "outputs": [
@@ -625,7 +615,7 @@
        "(2000000, 21)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,14 +633,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-11T09:27:43.269534Z",
-     "iopub.status.busy": "2024-12-11T09:27:43.269167Z",
-     "iopub.status.idle": "2024-12-11T09:27:43.804088Z",
-     "shell.execute_reply": "2024-12-11T09:27:43.802765Z",
-     "shell.execute_reply.started": "2024-12-11T09:27:43.269501Z"
+     "iopub.execute_input": "2025-01-05T13:24:15.242181Z",
+     "iopub.status.busy": "2025-01-05T13:24:15.241948Z",
+     "iopub.status.idle": "2025-01-05T13:24:15.669968Z",
+     "shell.execute_reply": "2025-01-05T13:24:15.669968Z",
+     "shell.execute_reply.started": "2025-01-05T13:24:15.242181Z"
     }
    },
    "outputs": [],
@@ -660,14 +650,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-11T09:27:43.805971Z",
-     "iopub.status.busy": "2024-12-11T09:27:43.805532Z",
-     "iopub.status.idle": "2024-12-11T09:27:44.499537Z",
-     "shell.execute_reply": "2024-12-11T09:27:44.498331Z",
-     "shell.execute_reply.started": "2024-12-11T09:27:43.805927Z"
+     "iopub.execute_input": "2025-01-05T13:24:15.670979Z",
+     "iopub.status.busy": "2025-01-05T13:24:15.670979Z",
+     "iopub.status.idle": "2025-01-05T13:24:17.126780Z",
+     "shell.execute_reply": "2025-01-05T13:24:17.126780Z",
+     "shell.execute_reply.started": "2025-01-05T13:24:15.670979Z"
     }
    },
    "outputs": [],
@@ -677,14 +667,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-11T09:27:44.501292Z",
-     "iopub.status.busy": "2024-12-11T09:27:44.500995Z",
-     "iopub.status.idle": "2024-12-11T09:27:49.428927Z",
-     "shell.execute_reply": "2024-12-11T09:27:49.427705Z",
-     "shell.execute_reply.started": "2024-12-11T09:27:44.501264Z"
+     "iopub.execute_input": "2025-01-05T13:24:17.128999Z",
+     "iopub.status.busy": "2025-01-05T13:24:17.126780Z",
+     "iopub.status.idle": "2025-01-05T13:24:20.997894Z",
+     "shell.execute_reply": "2025-01-05T13:24:20.997894Z",
+     "shell.execute_reply.started": "2025-01-05T13:24:17.126780Z"
     }
    },
    "outputs": [],
@@ -703,14 +693,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-11T09:27:49.431262Z",
-     "iopub.status.busy": "2024-12-11T09:27:49.430379Z",
-     "iopub.status.idle": "2024-12-11T09:27:50.131316Z",
-     "shell.execute_reply": "2024-12-11T09:27:50.129999Z",
-     "shell.execute_reply.started": "2024-12-11T09:27:49.431212Z"
+     "iopub.execute_input": "2025-01-05T13:24:20.997894Z",
+     "iopub.status.busy": "2025-01-05T13:24:20.997894Z",
+     "iopub.status.idle": "2025-01-05T13:24:21.184614Z",
+     "shell.execute_reply": "2025-01-05T13:24:21.182514Z",
+     "shell.execute_reply.started": "2025-01-05T13:24:20.997894Z"
     }
    },
    "outputs": [
@@ -840,30 +830,6 @@
        "      <td>[5.0, 2.0, 3.0, 1.0, 4.0, 6.0, 8.0, 9.0, 7.0, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Property Type</td>\n",
-       "      <td>object</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>[House, Apartment, Condo]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Exercise Frequency</td>\n",
-       "      <td>object</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>[Weekly, Monthly, Daily, Rarely]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Smoking Status</td>\n",
-       "      <td>object</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>[No, Yes]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>id</td>\n",
        "      <td>int64</td>\n",
@@ -872,12 +838,12 @@
        "      <td>[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Policy Start Date</td>\n",
-       "      <td>datetime64[ns]</td>\n",
+       "      <th>2</th>\n",
+       "      <td>Gender</td>\n",
+       "      <td>object</td>\n",
        "      <td>0</td>\n",
-       "      <td>173790</td>\n",
-       "      <td>[2023-12-23 15:21:39.134960, 2023-06-12 15:21:...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[Female, Male]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -896,20 +862,44 @@
        "      <td>[Bachelor's, Master's, High School, PhD]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Gender</td>\n",
-       "      <td>object</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>[Female, Male]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>Policy Type</td>\n",
        "      <td>object</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>[Premium, Comprehensive, Basic]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Policy Start Date</td>\n",
+       "      <td>datetime64[ns]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>173790</td>\n",
+       "      <td>[2023-12-23 15:21:39.134960, 2023-06-12 15:21:...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Smoking Status</td>\n",
+       "      <td>object</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[No, Yes]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Exercise Frequency</td>\n",
+       "      <td>object</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[Weekly, Monthly, Daily, Rarely]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Property Type</td>\n",
+       "      <td>object</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>[House, Apartment, Condo]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -929,15 +919,15 @@
        "4         Marital Status          object   30865               3   \n",
        "12           Vehicle Age          object       9              20   \n",
        "14    Insurance Duration          object       3               9   \n",
-       "19         Property Type          object       0               3   \n",
-       "18    Exercise Frequency          object       0               4   \n",
-       "17        Smoking Status          object       0               2   \n",
        "0                     id           int64       0         2000000   \n",
-       "15     Policy Start Date  datetime64[ns]       0          173790   \n",
+       "2                 Gender          object       0               2   \n",
        "9               Location          object       0               3   \n",
        "6        Education Level          object       0               4   \n",
-       "2                 Gender          object       0               2   \n",
        "10           Policy Type          object       0               3   \n",
+       "15     Policy Start Date  datetime64[ns]       0          173790   \n",
+       "17        Smoking Status          object       0               2   \n",
+       "18    Exercise Frequency          object       0               4   \n",
+       "19         Property Type          object       0               3   \n",
        "\n",
        "                                              Uniques  \n",
        "20  [2869.0, 1483.0, 567.0, 765.0, 2022.0, 3202.0,...  \n",
@@ -952,18 +942,18 @@
        "4                    [Married, Divorced, Single, nan]  \n",
        "12  [17.0, 12.0, 14.0, 0.0, 8.0, 4.0, 11.0, 10.0, ...  \n",
        "14  [5.0, 2.0, 3.0, 1.0, 4.0, 6.0, 8.0, 9.0, 7.0, ...  \n",
-       "19                          [House, Apartment, Condo]  \n",
-       "18                   [Weekly, Monthly, Daily, Rarely]  \n",
-       "17                                          [No, Yes]  \n",
        "0   [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13,...  \n",
-       "15  [2023-12-23 15:21:39.134960, 2023-06-12 15:21:...  \n",
+       "2                                      [Female, Male]  \n",
        "9                            [Urban, Rural, Suburban]  \n",
        "6            [Bachelor's, Master's, High School, PhD]  \n",
-       "2                                      [Female, Male]  \n",
-       "10                    [Premium, Comprehensive, Basic]  "
+       "10                    [Premium, Comprehensive, Basic]  \n",
+       "15  [2023-12-23 15:21:39.134960, 2023-06-12 15:21:...  \n",
+       "17                                          [No, Yes]  \n",
+       "18                   [Weekly, Monthly, Daily, Rarely]  \n",
+       "19                          [House, Apartment, Condo]  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
