--- a/4. Model Building.ipynb
+++ b/4. Model Building.ipynb
@@ -4577,12 +4577,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "id": "0e8ab34a-c23b-403e-8067-a0c8a1600677",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-01-05T12:10:46.072752Z",
-     "iopub.status.busy": "2025-01-05T12:10:46.072752Z"
+     "iopub.status.busy": "2025-01-05T12:10:46.072752Z",
+     "iopub.status.idle": "2025-01-05T12:11:18.640646Z",
+     "shell.execute_reply": "2025-01-05T12:11:18.640646Z",
+     "shell.execute_reply.started": "2025-01-05T12:10:46.072752Z"
     }
    },
    "outputs": [],
@@ -4628,15 +4631,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 124,
    "id": "66bb3099-ae71-4bf3-8590-95f6df5c84c7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-05T10:29:44.488914Z",
-     "iopub.status.busy": "2025-01-05T10:29:44.488914Z",
-     "iopub.status.idle": "2025-01-05T10:29:54.724939Z",
-     "shell.execute_reply": "2025-01-05T10:29:54.724939Z",
-     "shell.execute_reply.started": "2025-01-05T10:29:44.488914Z"
+     "iopub.execute_input": "2025-01-05T12:11:22.082260Z",
+     "iopub.status.busy": "2025-01-05T12:11:22.082260Z",
+     "iopub.status.idle": "2025-01-05T12:11:25.713880Z",
+     "shell.execute_reply": "2025-01-05T12:11:25.713880Z",
+     "shell.execute_reply.started": "2025-01-05T12:11:22.082260Z"
     }
    },
    "outputs": [],
@@ -4656,15 +4659,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 125,
    "id": "770c96ef-93dd-4b99-bb22-69a83a1c9fdb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-31T20:44:21.908439Z",
-     "iopub.status.busy": "2024-12-31T20:44:21.907437Z",
-     "iopub.status.idle": "2024-12-31T20:44:23.381614Z",
-     "shell.execute_reply": "2024-12-31T20:44:23.380497Z",
-     "shell.execute_reply.started": "2024-12-31T20:44:21.908439Z"
+     "iopub.execute_input": "2025-01-05T12:11:25.713880Z",
+     "iopub.status.busy": "2025-01-05T12:11:25.713880Z",
+     "iopub.status.idle": "2025-01-05T12:11:26.151237Z",
+     "shell.execute_reply": "2025-01-05T12:11:26.151237Z",
+     "shell.execute_reply.started": "2025-01-05T12:11:25.713880Z"
     }
    },
    "outputs": [
@@ -4694,78 +4697,48 @@
        "      <th>Fold 3</th>\n",
        "      <th>Fold 4</th>\n",
        "      <th>Fold 5</th>\n",
-       "      <th>Fold 6</th>\n",
-       "      <th>Fold 7</th>\n",
-       "      <th>Fold 8</th>\n",
-       "      <th>Fold 9</th>\n",
-       "      <th>Fold 10</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>6.551424</td>\n",
-       "      <td>6.485476</td>\n",
-       "      <td>6.601262</td>\n",
-       "      <td>6.532599</td>\n",
-       "      <td>6.573359</td>\n",
-       "      <td>6.519237</td>\n",
-       "      <td>6.472776</td>\n",
-       "      <td>6.641038</td>\n",
-       "      <td>6.532362</td>\n",
-       "      <td>6.469150</td>\n",
+       "      <td>6.479038</td>\n",
+       "      <td>6.498585</td>\n",
+       "      <td>6.523505</td>\n",
+       "      <td>6.619140</td>\n",
+       "      <td>6.556611</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>6.693403</td>\n",
-       "      <td>6.735639</td>\n",
-       "      <td>6.719050</td>\n",
-       "      <td>6.685140</td>\n",
-       "      <td>6.733575</td>\n",
-       "      <td>6.682848</td>\n",
-       "      <td>6.725292</td>\n",
-       "      <td>6.681686</td>\n",
-       "      <td>6.720510</td>\n",
-       "      <td>6.686640</td>\n",
+       "      <td>6.744839</td>\n",
+       "      <td>6.693970</td>\n",
+       "      <td>6.713507</td>\n",
+       "      <td>6.693515</td>\n",
+       "      <td>6.736408</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>6.669284</td>\n",
-       "      <td>6.659231</td>\n",
-       "      <td>6.636197</td>\n",
-       "      <td>6.655928</td>\n",
-       "      <td>6.655478</td>\n",
-       "      <td>6.664165</td>\n",
-       "      <td>6.689860</td>\n",
-       "      <td>6.691477</td>\n",
-       "      <td>6.633185</td>\n",
-       "      <td>6.643531</td>\n",
+       "      <td>6.663790</td>\n",
+       "      <td>6.624553</td>\n",
+       "      <td>6.653802</td>\n",
+       "      <td>6.690502</td>\n",
+       "      <td>6.654886</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>6.687991</td>\n",
-       "      <td>6.700724</td>\n",
-       "      <td>6.685077</td>\n",
-       "      <td>6.689615</td>\n",
-       "      <td>6.694585</td>\n",
-       "      <td>6.698281</td>\n",
-       "      <td>6.695249</td>\n",
-       "      <td>6.703917</td>\n",
-       "      <td>6.709956</td>\n",
-       "      <td>6.718604</td>\n",
+       "      <td>6.704652</td>\n",
+       "      <td>6.684525</td>\n",
+       "      <td>6.689175</td>\n",
+       "      <td>6.681214</td>\n",
+       "      <td>6.727800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>6.601223</td>\n",
-       "      <td>6.586610</td>\n",
-       "      <td>6.594584</td>\n",
-       "      <td>6.616701</td>\n",
-       "      <td>6.613587</td>\n",
-       "      <td>6.607813</td>\n",
-       "      <td>6.592059</td>\n",
-       "      <td>6.613125</td>\n",
-       "      <td>6.597745</td>\n",
-       "      <td>6.591645</td>\n",
+       "      <td>6.582340</td>\n",
+       "      <td>6.596033</td>\n",
+       "      <td>6.617133</td>\n",
+       "      <td>6.598980</td>\n",
+       "      <td>6.602212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -4774,113 +4747,70 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>799995</th>\n",
-       "      <td>6.902434</td>\n",
-       "      <td>6.892521</td>\n",
-       "      <td>6.884256</td>\n",
-       "      <td>6.886408</td>\n",
-       "      <td>6.910605</td>\n",
-       "      <td>6.916957</td>\n",
-       "      <td>6.910586</td>\n",
-       "      <td>6.871274</td>\n",
-       "      <td>6.879500</td>\n",
-       "      <td>6.883066</td>\n",
+       "      <td>6.884297</td>\n",
+       "      <td>6.874234</td>\n",
+       "      <td>6.919119</td>\n",
+       "      <td>6.900542</td>\n",
+       "      <td>6.862596</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>799996</th>\n",
-       "      <td>6.268355</td>\n",
-       "      <td>6.142203</td>\n",
-       "      <td>6.171807</td>\n",
-       "      <td>6.120068</td>\n",
-       "      <td>6.172171</td>\n",
-       "      <td>6.267633</td>\n",
-       "      <td>6.156420</td>\n",
-       "      <td>6.191467</td>\n",
-       "      <td>6.206396</td>\n",
-       "      <td>6.273045</td>\n",
+       "      <td>6.295704</td>\n",
+       "      <td>6.186181</td>\n",
+       "      <td>6.209846</td>\n",
+       "      <td>6.239298</td>\n",
+       "      <td>6.249433</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>799997</th>\n",
-       "      <td>6.682500</td>\n",
-       "      <td>6.664797</td>\n",
-       "      <td>6.689899</td>\n",
-       "      <td>6.653399</td>\n",
-       "      <td>6.677367</td>\n",
-       "      <td>6.664535</td>\n",
-       "      <td>6.613153</td>\n",
-       "      <td>6.649033</td>\n",
-       "      <td>6.648409</td>\n",
-       "      <td>6.661296</td>\n",
+       "      <td>6.637500</td>\n",
+       "      <td>6.652418</td>\n",
+       "      <td>6.642992</td>\n",
+       "      <td>6.663728</td>\n",
+       "      <td>6.668590</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>799998</th>\n",
-       "      <td>6.718887</td>\n",
-       "      <td>6.719099</td>\n",
-       "      <td>6.686544</td>\n",
-       "      <td>6.719136</td>\n",
-       "      <td>6.712388</td>\n",
-       "      <td>6.706915</td>\n",
-       "      <td>6.681868</td>\n",
-       "      <td>6.679136</td>\n",
-       "      <td>6.714805</td>\n",
-       "      <td>6.706521</td>\n",
+       "      <td>6.702969</td>\n",
+       "      <td>6.711475</td>\n",
+       "      <td>6.707851</td>\n",
+       "      <td>6.699588</td>\n",
+       "      <td>6.704911</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>799999</th>\n",
-       "      <td>6.623433</td>\n",
-       "      <td>6.619185</td>\n",
-       "      <td>6.635270</td>\n",
-       "      <td>6.624030</td>\n",
-       "      <td>6.621256</td>\n",
-       "      <td>6.654881</td>\n",
-       "      <td>6.623613</td>\n",
-       "      <td>6.633606</td>\n",
-       "      <td>6.636501</td>\n",
-       "      <td>6.642179</td>\n",
+       "      <td>6.628619</td>\n",
+       "      <td>6.626939</td>\n",
+       "      <td>6.634397</td>\n",
+       "      <td>6.622308</td>\n",
+       "      <td>6.657501</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>800000 rows × 10 columns</p>\n",
+       "<p>800000 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          Fold 1    Fold 2    Fold 3    Fold 4    Fold 5    Fold 6    Fold 7  \\\n",
-       "0       6.551424  6.485476  6.601262  6.532599  6.573359  6.519237  6.472776   \n",
-       "1       6.693403  6.735639  6.719050  6.685140  6.733575  6.682848  6.725292   \n",
-       "2       6.669284  6.659231  6.636197  6.655928  6.655478  6.664165  6.689860   \n",
-       "3       6.687991  6.700724  6.685077  6.689615  6.694585  6.698281  6.695249   \n",
-       "4       6.601223  6.586610  6.594584  6.616701  6.613587  6.607813  6.592059   \n",
-       "...          ...       ...       ...       ...       ...       ...       ...   \n",
-       "799995  6.902434  6.892521  6.884256  6.886408  6.910605  6.916957  6.910586   \n",
-       "799996  6.268355  6.142203  6.171807  6.120068  6.172171  6.267633  6.156420   \n",
-       "799997  6.682500  6.664797  6.689899  6.653399  6.677367  6.664535  6.613153   \n",
-       "799998  6.718887  6.719099  6.686544  6.719136  6.712388  6.706915  6.681868   \n",
-       "799999  6.623433  6.619185  6.635270  6.624030  6.621256  6.654881  6.623613   \n",
+       "          Fold 1    Fold 2    Fold 3    Fold 4    Fold 5\n",
+       "0       6.479038  6.498585  6.523505  6.619140  6.556611\n",
+       "1       6.744839  6.693970  6.713507  6.693515  6.736408\n",
+       "2       6.663790  6.624553  6.653802  6.690502  6.654886\n",
+       "3       6.704652  6.684525  6.689175  6.681214  6.727800\n",
+       "4       6.582340  6.596033  6.617133  6.598980  6.602212\n",
+       "...          ...       ...       ...       ...       ...\n",
+       "799995  6.884297  6.874234  6.919119  6.900542  6.862596\n",
+       "799996  6.295704  6.186181  6.209846  6.239298  6.249433\n",
+       "799997  6.637500  6.652418  6.642992  6.663728  6.668590\n",
+       "799998  6.702969  6.711475  6.707851  6.699588  6.704911\n",
+       "799999  6.628619  6.626939  6.634397  6.622308  6.657501\n",
        "\n",
-       "          Fold 8    Fold 9   Fold 10  \n",
-       "0       6.641038  6.532362  6.469150  \n",
-       "1       6.681686  6.720510  6.686640  \n",
-       "2       6.691477  6.633185  6.643531  \n",
-       "3       6.703917  6.709956  6.718604  \n",
-       "4       6.613125  6.597745  6.591645  \n",
-       "...          ...       ...       ...  \n",
-       "799995  6.871274  6.879500  6.883066  \n",
-       "799996  6.191467  6.206396  6.273045  \n",
-       "799997  6.649033  6.648409  6.661296  \n",
-       "799998  6.679136  6.714805  6.706521  \n",
-       "799999  6.633606  6.636501  6.642179  \n",
-       "\n",
-       "[800000 rows x 10 columns]"
+       "[800000 rows x 5 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
